# pydantic-to-pyarrow

./: .gitignore  Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: codeql.yml  publish.yml  test.yml
src/pydantic_to_pyarrow/: __init__.py  schema.py
tests/: test_parquet.py  test_schema.py  test_version.py
